2010-07-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed double free bug
	* src/Sqlite3CookieParserImpl.cc

2010-07-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error with OSX g++ 4.0.1
	* src/FileEntry.h
	* test/FileEntryTest.cc

2010-07-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Reverted default value of -j from 2 to 5.
	* doc/aria2c.1.txt
	* src/OptionHandlerFactory.cc

2010-07-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Metadata download may take very long time. If URIs are
	available, give up metadata download in at most 30 seconds.
	* src/Metalink2RequestGroup.cc

2010-07-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Call RequestGroup::setForceHaltRequested(true) from
	BtStopDownloadCommand to avoid long delay of tracker request.
	* src/BtStopDownloadCommand.cc

2010-07-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Pass maxSplitSize as an argument, instead of member variable of
	DefaultPieceStorage. SegmentMan::getSegment(cuid_t,size_t index)
	was renamed to SegmentMan::getSegmentWithIndex(...)
	* src/AbstractCommand.cc
	* src/AbstractCommand.h
	* src/DefaultPieceStorage.cc
	* src/DefaultPieceStorage.h
	* src/DownloadCommand.cc
	* src/FtpNegotiationCommand.cc
	* src/HttpResponseCommand.cc
	* src/PieceStorage.h
	* src/RequestGroup.cc
	* src/SegmentMan.cc
	* src/SegmentMan.h
	* src/UnknownLengthPieceStorage.cc
	* src/UnknownLengthPieceStorage.h
	* test/MockPieceStorage.h
	* test/SegmentManTest.cc

2010-07-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed prepareForRetry from CreateRequestCommand
	* src/CreateRequestCommand.cc
	* src/CreateRequestCommand.h

2010-07-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Set PREF_REUSE_URI=V_FALSE for tracker request.
	* src/TrackerWatcherCommand.cc

2010-07-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.10.0
	* configure.ac