@@ -2576,6 +2576,39 @@ max\-resume\-failure\-tries
 http\-accept\-gzip
 .RE
 .sp
+.RS 4
+.ie n \{\
+\h'-04'\(bu\h'+03'\c
+.\}
+.el \{\
+.sp -1
+.IP \(bu 2.3
+.\}
+max\-connection\-per\-server
+.RE
+.sp
+.RS 4
+.ie n \{\
+\h'-04'\(bu\h'+03'\c
+.\}
+.el \{\
+.sp -1
+.IP \(bu 2.3
+.\}
+min\-split\-size
+.RE
+.sp
+.RS 4
+.ie n \{\
+\h'-04'\(bu\h'+03'\c
+.\}
+.el \{\
+.sp -1
+.IP \(bu 2.3
+.\}
+conditional\-get
+.RE
+.sp
 These options have exactly same meaning of the ones in the command\-line options, but it just applies to the URIs it belongs to\&.
 .sp
 For example, the content of uri\&.txt is
