@@ -2987,6 +2987,21 @@ max-resume-failure-tries
 http-accept-gzip
 </p>
 </li>
+<li>
+<p>
+max-connection-per-server
+</p>
+</li>
+<li>
+<p>
+min-split-size
+</p>
+</li>
+<li>
+<p>
+conditional-get
+</p>
+</li>
 </ul></div>
 <div class="paragraph"><p>These options have exactly same meaning of the ones in the
 command-line options, but it just applies to the URIs it belongs to.</p></div>
@@ -4242,7 +4257,7 @@ files in the program, then also delete it here.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2010-07-19 00:15:05 JST
+Last updated 2010-07-19 13:44:22 JST
 </div>
 </div>
 </body>
